--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			class Start {
 				constructor() {
 					this.playerName =
-						"YEAYYY KAMU MENANG KAMU KEREN BANGETTT! 😍😍";
-					this.botName = "YAHHH KAMU KALAH COBA LAGI YAHH SEMANGATSS KAMU PASTI BISAA!😊😊";
+						"Bjir bisa menang, keliatan banget curangnya tuh🙄";
+					this.botName = "Yahahahay kalah cupu amat dek😊😊";
 					this.playerOption;
 					this.botOption;
 					this.winner = "";
